force-app/main/default/objects/Product2/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Custom description field to allow rich text data such as hyperlink</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>