force-app/main/default/objects/Product2/fields/IRDA_Categorization__c.field-meta.xml
<CustomField>
    <fullName>IRDA_Categorization__c</fullName>
    <description>Created as part of ABSLI</description>
    <label>IRDA Categorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>