force-app/main/default/objects/Product2/fields/Product_Mix__c.field-meta.xml
<CustomField>
    <fullName>Product_Mix__c</fullName>
    <description>Created as part of ABSLI</description>
    <label>Product Mix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>