force-app/main/default/objects/Product2/fields/Source_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Modified_Date__c</fullName>
    <description>Last Modified Date from Source System.</description>
    <label>Source Modified Date</label>
    <type>DateTime</type>
</CustomField>