force-app/main/default/objects/Product2/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>Source System Name, possible values in case of FL - FINNRTL,FINNCORP,MINACS,SAP,A3S</description>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>