force-app/main/default/objects/Product2/listViews/ABHFL_Products.listView-meta.xml
<ListView>
    <fullName>ABHFL_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Business_Unit__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>ABHFL</value>
    </filters>
    <label>ABHFL Products</label>
</ListView>